--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Responsive-Flowers</title>
 </head>
 <body>
-    
+    <header class="header w-4/5 mx-auto">
+        <nav class="flex justify-between items-center py-4">
+            <img src="./assets/logo.png" alt="">
+            <div class="nav-menu flex gap-12">
+                    <div class="nav-link active-nav-link">Home</div>
+                    <div class="nav-link inactive-nav-link spe">Shop</div>
+                    <div class="nav-link inactive-nav-link">About us</div>
+                    <div>
+                        <i class="fa-solid fa-cart-shopping cart-text"></i>
+                        <span class="cart-text">Cart ($56)</span>
+                    </div>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
