--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Responsive-Flowers</title>
 </head>
@@ -23,5 +26,70 @@
             </div>
         </nav>
     </header>
+
+    <main>
+        <section class="w-full md:w-4/5 mx-auto flex flex-col md:flex-row md:pt-40">
+            <div class="flex flex-col order-2 md:order-2 justify-end w-full pt-8 px-5 md:px-0">
+                <h1 class="hero-text text-3xl md:text-[65px] pb-5">ALWAYS <span class="orange">FRESH<br> FLOWERS</span></h1>
+                <p class="description-text text-base md:text-[22px]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+            </div>
+            <img class="order-1 md:order-2" src="./assets/hero-flower.png" alt="">
+        </section>
+
+        <section class="w-9/10 md:w-4/5 mx-auto text-center pt-14 md:pt-30">
+            <h2 class="headline-text orange text-2xl md:text-[3.25rem]">Our <span class="text-black">Plants</span></h2>
+            <p class="description-text text-base md:text-[22px] pt-4 md:px-50">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            <div class="card-container grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-4 lg:gap-12 pt-8 md:pt-12">
+                <div>
+                    <img src="./assets/sample-flower-image.png" alt="">
+                    <div class="product-title pt-6 md:text-[1.35rem]">Lily Blossom</div>
+                    <div class="product-price md:text-[1.35rem]">20 USD</div>
+                    <button class="cart-button w-full my-4 md:mb-0">ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="./assets/sample-flower-image.png" alt="">
+                    <div class="product-title pt-6 md:text-[1.35rem]">Lily Blossom</div>
+                    <div class="product-price md:text-[1.35rem]">20 USD</div>
+                    <button class="cart-button w-full my-4 md:mb-0">ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="./assets/sample-flower-image.png" alt="">
+                    <div class="product-title pt-6 md:text-[1.35rem]">Lily Blossom</div>
+                    <div class="product-price md:text-[1.35rem]">20 USD</div>
+                    <button class="cart-button w-full my-4 md:mb-0">ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="./assets/sample-flower-image.png" alt="">
+                    <div class="product-title pt-6 md:text-[1.35rem]">Lily Blossom</div>
+                    <div class="product-price md:text-[1.35rem]">20 USD</div>
+                    <button class="cart-button w-full my-4 md:mb-0">ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="./assets/sample-flower-image.png" alt="">
+                    <div class="product-title pt-6 md:text-[1.35rem]">Lily Blossom</div>
+                    <div class="product-price md:text-[1.35rem]">20 USD</div>
+                    <button class="cart-button w-full my-4 md:mb-0">ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="./assets/sample-flower-image.png" alt="">
+                    <div class="product-title pt-6 md:text-[1.35rem]">Lily Blossom</div>
+                    <div class="product-price md:text-[1.35rem]">20 USD</div>
+                    <button class="cart-button w-full my-4 md:mb-0">ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="./assets/sample-flower-image.png" alt="">
+                    <div class="product-title pt-6 md:text-[1.35rem]">Lily Blossom</div>
+                    <div class="product-price md:text-[1.35rem]">20 USD</div>
+                    <button class="cart-button w-full my-4 md:mb-0">ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="./assets/sample-flower-image.png" alt="">
+                    <div class="product-title pt-6 md:text-[1.35rem]">Lily Blossom</div>
+                    <div class="product-price md:text-[1.35rem]">20 USD</div>
+                    <button class="cart-button w-full my-4 md:mb-0">ADD TO CART</button>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
