Flower and Plants Lover - section is designed

--- a/index.html
+++ b/index.html
@@ -90,6 +90,22 @@
                 </div>
             </div>
         </section>
+
+        <section class="w-9/10 md:w-4/5 mx-auto mt-6 md:mt-50">
+            <div class="flex justify-between flex-col md:flex-row relative">
+                <img src="./assets/flower-store.png" alt="">
+                <img src="./assets/trusted-badge.png" alt="Trusted Badge" class="hidden md:block absolute trusted-badge-shadow filter grayscale blur-md rotate-5"/>
+                <img src="./assets/trusted-badge.png" alt="Trusted Badge" class="hidden md:block absolute trusted-badge"/>
+                <div class="md:ps-20 md:me-18">
+                    <h1 class="headline-text text-2xl md:text-[3.25rem] pt-6">Flower & Plants Lover</h1>
+                    <ul class="list-disc pl-6 md:pl-8 pt-4 description-text text-base md:text-[22px]">
+                        <li class="md:py-2">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li class=" pt-2 md:py-2">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li class="pt-2 md:py-2">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
