--- a/index.html
+++ b/index.html
@@ -106,6 +106,48 @@
                 </div>
             </div>
         </section>
+
+        <section class="w-9/10 md:w-4/5 mx-auto text-center mb-50 pt-20 md:pt-30">
+            <h2 class="headline-text orange text-2xl md:text-[3.25rem]">Latest <span class="text-black">Deals</span></h2>
+            <p class="description-text text-base md:text-[22px] pt-6 md:px-50">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+
+            <div class="py-10 md:py-30">
+                <div class="mx-auto grid grid-cols-1 md:grid-cols-3 gap-6 items-stretch">
+                    
+                    <!-- Left Column -->
+                    <div class="flex flex-col gap-6">
+                    <!-- Bloom Plant -->
+                        <div class="relative rounded-xl overflow-hidden h-48 md:h-full">
+                            <img src="./assets/deal-bloom.png" alt="Bloom Plant" class="w-full h-full object-cover">
+                            <div class="absolute inset-0 bg-black/40 flex flex-col justify-center">
+                                <h2 class="text-white text-xl headline-text">60% Off | Bloom Plant</h2>
+                                <a href="#" class="mt-2 text-white underline underline-offset-4 shop-now-text text-base">Shop Now</a>   
+                            </div>
+                        </div>
+                        <!-- Ana Plant -->
+                        <div class="relative rounded-xl overflow-hidden h-48 md:h-full">
+                            <img src="./assets/deal-ana.png" alt="Ana Plant" class="w-full h-full object-cover">
+                            <div class="absolute inset-0 bg-black/40 flex flex-col justify-center">
+                                <h2 class="text-white text-xl headline-text">30% Off | Ana Plant</h2>
+                                <a href="#" class="mt-2 text-white underline underline-offset-4 shop-now-text text-base">Shop Now</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Right Column (Zabo Plant) spans 2 columns) -->
+                    <div class="relative rounded-xl overflow-hidden md:col-span-2 h-48 md:h-full">
+                        <img src="./assets/deal-zabo.png" alt="Zabo Plant" class="w-full h-full object-cover">
+                        <div class="absolute inset-0 bg-black/40 flex flex-col justify-center items-center text-center">
+                            <h2 class="text-white text-xl md:text-4xl font-bold headline-text">25% Off | Zabo Plant</h2>
+                            <a href="#" class="mt-4 text-white text-base md:text-[28px] font-semibold underline underline-offset-4 shop-now-text">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        
     </main>
 </body>
 </html>
