Footer section is created

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
         </section>
 
-        <section class="w-9/10 md:w-4/5 mx-auto text-center mb-50 pt-20 md:pt-30">
+        <section class="w-9/10 md:w-4/5 mx-auto text-center mb-10 pt-20 md:pt-30">
             <h2 class="headline-text orange text-2xl md:text-[3.25rem]">Latest <span class="text-black">Deals</span></h2>
             <p class="description-text text-base md:text-[22px] pt-6 md:px-50">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
 
@@ -145,6 +145,48 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="relative overflow-hidden h-48 md:h-full">
+                <img src="./assets/news-letter-bg.png" alt="Bloom Plant" class="w-full h-full object-cover">
+                <div class="absolute inset-0 flex flex-col justify-center items-center">
+                    <h2 class="text-white text-xl md:text-[50px] headline-text py-6">Join the colorful Bunch</h2>
+                    <div class="flex items-center w-full justify-center">
+                        <input type="text" placeholder="Write email" class="h-12 ps-4 w-1/2 md:w-2/5 py-6 bg-white text-base">
+                        <button class="bg-white subscribe-button px-6 py-3 md:px-20 md:py-3">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="w-9/10 md:w-4/5 mx-auto mb-10 pt-10 md:pt-10 md:flex justify-between">
+            <div class="flex flex-col w-82">
+                <img class="w-28" src="./assets/logo.png" alt="">
+                <p class="description-text text-base md:text-[22px] mt-4">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+            </div>
+            <div class="flex flex-col md:flex-row gap-10 md:gap-40">
+                <div class="flex flex-col gap-4 md:gap-6 mt-4 md:mt-0">
+                    <a class="footer-links" href="">Home</a>
+                    <a class="footer-links" href="">About Us</a>
+                    <a class="footer-links" href="">Blog</a>
+                    <a class="footer-links" href="">FAQ</a>
+                    <a class="footer-links" href="">Contact Us</a>
+                </div>
+                <div class="flex flex-col gap-4 md:gap-6">
+                    <a class="footer-links" href="">Features</a>
+                    <a class="footer-links" href="">Pricing</a>
+                    <a class="footer-links" href="">Privacy Policy</a>
+                    <a class="footer-links" href="">Terms of Service</a>
+                    <a class="footer-links" href="">Help Center</a>
+                </div>
+            </div>
+            <div class="flex mt-6 md:mt-0 gap-6 h-8">
+                <img class="w-8 h-8" src="./assets/icon-linkedin.png" alt="">
+                <img class="w-5 h-5 items-center my-auto" src="./assets/icon-twitter.png" alt="">
+                <img class="w-8 h-8" src="./assets/icon-facebook.png" alt="">
+                <img class="w-8 h-8" src="./assets/icon-youtube.png" alt="">
+            </div>
+        </footer>
 
 
         
