--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <h2 class="text-white text-xl md:text-[50px] headline-text py-6">Join the colorful Bunch</h2>
                     <div class="flex items-center w-full justify-center">
                         <input type="text" placeholder="Write email" class="h-12 ps-4 w-1/2 md:w-2/5 py-6 bg-white text-base">
-                        <button class="bg-white subscribe-button px-6 py-3 md:px-20 md:py-3">Subscribe</button>
+                        <button class="bg-white px-6 py-3 md:px-20 md:py-3" style="background-color: #E95A08; color: white;">Subscribe</button>
                     </div>
                 </div>
             </div>
