Footer section is edited

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <a class="footer-links" href="">FAQ</a>
                     <a class="footer-links" href="">Contact Us</a>
                 </div>
-                <div class="flex flex-col gap-4 md:gap-6">
+                <div class="flex flex-col gap-4 md:gap-6 mt-[-22px] md:mt-0">
                     <a class="footer-links" href="">Features</a>
                     <a class="footer-links" href="">Pricing</a>
                     <a class="footer-links" href="">Privacy Policy</a>
